# xptmrt

./: CMakeLists.txt  README.md  advapi32.cpp  comdlg32.cpp  common.h  gdi32.cpp  iphlpapi.cpp  kernel32.cpp  kernel32.def  kernel32_impl.cpp  ntdll.h  ole32.cpp  oleaut32.cpp  shell32.cpp  shlwapi.cpp  test.cpp  user32.cpp  uxtheme.cpp  ws2_32.cpp
lib/x64/: ntdll.lib
lib/x86/: ntdll.lib
scripts/: xpcompat.py
